<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.example.android.multi_variablecalcquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/geometry"
                android:scaleType="centerCrop"
                android:paddingTop="30dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="40sp"
                android:layout_centerInParent="true"
                android:fontFamily="casual"
                android:textColor="@color/questionBox"
                />
        </RelativeLayout>
        <TextView
            style="@style/QuestionText"
            android:text="Question 1"
            />
        <View
            style="@style/BorderView"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipsoid"
            />
        <TextView
            style="@style/questionPhrase"
            android:text="@string/question1"
            />
        <EditText
            style="@style/InputAnswerText"
            android:id="@+id/text_answer_1"
            />
        <TextView
            style="@style/questionPhrase"
            android:text="@string/question2"
            />
        <RadioGroup
            android:id="@+id/group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                style="@style/RadioFormat"
                android:text="@string/ellipsoid"
                android:id="@+id/correct_rad_1"
                />
            <RadioButton
                style="@style/RadioFormat"
                android:text="@string/cone"
                />
            <RadioButton
                style="@style/RadioFormat"
                android:text="@string/cylinder"
                />
        </RadioGroup>
        <TextView
            style="@style/QuestionText"
            android:text="Question 2"
            />
        <View
            style="@style/BorderView"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cylinder"
            />
        <TextView
            style="@style/questionPhrase"
            android:text="@string/question1"
            />
        <EditText
            style="@style/InputAnswerText"
            android:id="@+id/text_answer_2"
            />
        <TextView
            style="@style/questionPhrase"
            android:text="@string/question2"
            />
        <RadioGroup
            android:id="@+id/group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                style="@style/RadioFormat"
                android:text="@string/oneSheet"
                />
            <RadioButton
                android:id="@+id/correct_rad_2"
                style="@style/RadioFormat"
                android:text="@string/cylinder"
                />
            <RadioButton
                style="@style/RadioFormat"
                android:text="@string/twoSheet"
                />
        </RadioGroup>
        <TextView
            style="@style/QuestionText"
            android:text="Question 3"
            />
        <View
            style="@style/BorderView"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cone"
            />
        <TextView
            style="@style/questionPhrase"
            android:text="@string/question1"
            />
        <EditText
            style="@style/InputAnswerText"
            android:id="@+id/text_answer_3"
            />
        <TextView
            style="@style/questionPhrase"
            android:text="@string/question2"
            />
        <RadioGroup
            android:id="@+id/group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/correct_rad_3"
                style="@style/RadioFormat"
                android:text="@string/cone"
                />
            <RadioButton
                style="@style/RadioFormat"
                android:text="@string/ellipsoid"
                />
            <RadioButton
                style="@style/RadioFormat"
                android:text="@string/oneSheet"
                />
        </RadioGroup>
        <TextView
            style="@style/QuestionText"
            android:text="Question 4"
            />
        <View
            style="@style/BorderView"
            />
        <TextView
            style="@style/questionPhrase"
            android:text="@string/questionThree"
            />
        <CheckBox
            android:id="@+id/check_1_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneSheet" />
        <CheckBox
            android:id="@+id/check_2_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twoSheet" />
        <CheckBox
            android:id="@+id/check_3_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cone" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit Quiz"
            android:layout_marginTop="@dimen/phraseBottomMarg"
            android:textAlignment="center"
            android:onClick="CheckQuestions"
            />

    </LinearLayout>
</ScrollView>